# Sagrada

./: import-summary.txt  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DiceAnalyzer.cpp  PatternAnalyzer.cpp  native-lib.cpp
app/src/main/java/Activities/: CameraApi.java
app/src/main/java/Model/: ImageProcessor.java  ImageRotator.java  RuleCalculator.java  RuleHandler.java
app/src/main/java/Model/GameBoard/: GameBoard.java  Player.java
app/src/main/java/Model/Points/: CraftsmanPoints.java  PointsHandler.java
app/src/main/java/Model/Points/Quests/: Quest.java  (+3 more)
app/src/main/java/Model/Rules/: RULE_ERR.java  RuleCalculator.java  RuleHandler.java  RuleMsg.java
app/src/main/java/Model/Structs/: Dice.java  Slot.java
app/src/main/java/ViewModel/: GameViewModel.java  PlayerViewModel.java
app/src/main/res/drawable/: camera_frame.xml  dice_dot.xml  dice_invalid.xml  dice_valid.xml  points_btn_background_green.xml  points_btn_background_red.xml
app/src/main/res/layout/: activity_main.xml  cam_layout.xml  camera_layout.xml  craftsman_point_layout.xml  create_player_layout.xml  game_layout.xml  help_dialog_scroll_layout.xml  image_detection_layout.xml  information_layout.xml  menu_layout.xml  picture_preview_activity.xml  player_layout.xml  player_object_layout.xml  positive_rule_layout.xml  test.xml
app/src/main/res/menu/: cq_menu_layout.xml  game_menu_layout.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-b+cs/: strings.xml
app/src/main/res/xml/: photo_pattern.xml
(+35 files in other folders)
